[tool.poetry]
name = "my-blog"
version = "0.1.0"
description = ""
authors = ["Dr1DeX"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.0"
elasticsearch = "^8.14.0"
aio-pika = "^9.4.2"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
